Added delete command and some versioning support
